--- a/Keddit/app/build.gradle
+++ b/Keddit/app/build.gradle
@@ -37,6 +37,11 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'io.reactivex.rxjava2:rxjava:2.1.1'
 
+    // Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.6.0'
+    // Moshi
+    implementation 'com.squareup.retrofit2:converter-moshi:2.6.0'
+
     // Test
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
