--- a/Keddit/app/build.gradle
+++ b/Keddit/app/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-moshi:2.6.0'
 
     // Test
+    testImplementation 'org.mockito:mockito-core:1.9.5'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
