--- a/AndroidAppArchitecture/LoaderWeather/build.gradle
+++ b/AndroidAppArchitecture/LoaderWeather/build.gradle
@@ -1,21 +1,22 @@
 buildscript {
+    ext.kotlin_version = '1.3.41'
     repositories {
+        google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.3'
-        classpath 'me.tatarka:gradle-retrolambda:3.3.0-beta4'
-        classpath 'me.tatarka.retrolambda.projectlombok:lombok.ast:0.2.3.a2'
-        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
+        classpath 'com.android.tools.build:gradle:3.4.2'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 
-    configurations.classpath.exclude group: 'com.android.tools.external.lombok'
+//    configurations.classpath.exclude group: 'com.android.tools.external.lombok'
 }
 
 allprojects {
     repositories {
+        google()
         jcenter()
-        maven { url "https://jitpack.io" }
+//        maven { url "https://jitpack.io" }
     }
 }
 
