--- a/MvpExamples/ExampleTwo/app/src/main/AndroidManifest.xml
+++ b/MvpExamples/ExampleTwo/app/src/main/AndroidManifest.xml
@@ -10,15 +10,14 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <activity android:name=".choose.ChooseActivity">
+        <activity android:name=".features.users.UsersActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.SingleActivity" />
-        <activity android:name=".mvp.UsersActivity" />
+
     </application>
 
 </manifest>
